--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -1,1 +1,5 @@
-// @import './components/component';
+@import './components/main-nav';
+@import './components/search';
+@import './components/social-buttons';
+@import './components/for-clients';
+@import './components/contact-info';
