--- a/dev/pages/include/layouts/footer.html
+++ b/dev/pages/include/layouts/footer.html
@@ -1,1 +1,25 @@
-<h2>Footer</h2>
+<div class="footer__wrapper-contacts">
+    <div class="main-container max-width">
+        <div class="footer__block-logo">
+            @include('../ui/logo.html')
+            <div class="footer__block-signature">
+                <span class="footer__signature">Real Estate Searching Platform</span>
+            </div>
+            @include('../components/social-buttons.html')
+        </div>
+        @include('../components/for-clients.html')
+        @include('../components/contact-info.html')
+        @include('../ui/back-top.html')
+    </div>
+</div>
+<div class="footer__wrapper-copyright">
+    <div class="main-container max-width">
+        <div class="footer__block-copyright">
+            <span class="footer__copyright">© Property-Guide, 2022. All Rights Reserved</span>
+        </div>
+        <div class="footer__block-copyright-links">
+            <a href="#" class="footer__copyright-link link-reset">Privacy policy</a>
+            <a href="#" class="footer__copyright-link link-reset">Terms of use</a>
+        </div>
+    </div>
+</div>
