--- a/dev/assets/styles/_classes.scss
+++ b/dev/assets/styles/_classes.scss
@@ -7,14 +7,18 @@
 }
 
 .max-width {
-    max-width: 1100px;
+    max-width: 1440px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .hidden {
     display: none;
 }
 
-.page {}
+.page {
+    flex: 1 0 auto;
+}
 
 .title-reset {
     margin: 0;
@@ -56,7 +60,7 @@
         transition: border-bottom $transition-time;
 
         &:hover {
-            border-bottom-color: $main-color;
+            border-bottom-color: $black-text;
         }
     }
 }
