--- a/dev/assets/styles/_fonts.scss
+++ b/dev/assets/styles/_fonts.scss
@@ -1,6 +1,20 @@
-// @font-face {
-//     font-family: 'Name-font';
-//     font-style: normal;
-//     font-weight: normal;
-//     src: url("../assets/fonts/folder/name-font.woff2") format("woff2");
-// }
+@font-face {
+    font-family: 'Urbanist';
+    font-style: normal;
+    font-weight: 400;
+    src: url("../fonts/Urbanist/Urbanist-Regular.woff2") format("woff2");
+}
+
+@font-face {
+    font-family: 'Urbanist';
+    font-style: normal;
+    font-weight: 500;
+    src: url("../fonts/Urbanist/Urbanist-Medium.woff2") format("woff2");
+}
+
+@font-face {
+    font-family: 'Urbanist';
+    font-style: normal;
+    font-weight: 600;
+    src: url("../fonts/Urbanist/Urbanist-SemiBold.woff2") format("woff2");
+}
