--- a/dev/assets/styles/main.scss
+++ b/dev/assets/styles/main.scss
@@ -6,16 +6,22 @@
 
 * {
     box-sizing: border-box;
-    color: $main-color;
-    font-family: 'NameFont', sans-serif;
+    color: $black-text;
+    font-family: $main-font, sans-serif;
     font-weight: 400;
     font-size: 16px;
-    line-height: 1.1em;
+    line-height: 1.2em;
 }
 
 html,
 body {
     width: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 @import './pages/index.scss';
