--- a/dev/pages/include/components/main-nav.html
+++ b/dev/pages/include/components/main-nav.html
@@ -1,4 +1,7 @@
 <nav class="main-nav">
+    @include('../ui/specific-title.html', {
+        "title": "For clients"
+    })
     <ul class="main-nav__list list-reset">
         <li class="main-nav__li">
             <a href="#" class="main-nav__link link-reset">
