--- a/dev/assets/styles/media/max-992.scss
+++ b/dev/assets/styles/media/max-992.scss
@@ -1,1 +1,207 @@
-@media screen and (max-width: 992px) {}
+@media screen and (max-width: 992px) {
+    .header {
+        position: relative;
+
+        &.active-menu {
+            .header {
+                &__block-insight {
+                    transform: translateY(0);
+                    opacity: 1;
+                    visibility: visible;
+                    pointer-events: auto;
+                }
+
+                &__burger-menu {
+                    & span {
+                        &:not(:first-child) {
+                            margin-top: -2px;
+                        }
+            
+                        &:nth-child(1) {
+                            transform: rotate(225deg);
+                        }
+            
+                        &:nth-child(2) {
+                            opacity: 0;
+                        }
+            
+                        &:nth-child(3) {
+                            transform: rotate(135deg);
+                        }
+                    }
+                }
+            }
+        }
+
+        &__block-insight,
+        &__block-logo,
+        &__wrapper-contacts,
+        .search,
+        .main-nav {
+            width: 100%;
+        }
+
+        .main-nav {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+
+        &__block-insight {
+            position: fixed;
+            top: 0;
+            padding-top: 125px;
+            height: 100vh;
+            transform: translateY(-10px);
+            opacity: 0;
+            visibility: hidden;
+            pointer-events: none;
+            transition: 
+                transform $transition-time,
+                opacity $transition-time,
+                visibility $transition-time;
+
+            .max-width {
+                flex-direction: column;
+                align-items: flex-start;
+                padding: 0;
+                height: 100%;
+            }
+        }
+
+        &__wrapper-contacts {
+            background-color: $very-light-blue;
+            padding: 26px 20px 30px 20px;
+        }
+
+        &__burger-menu {
+            display: flex;
+            margin-left: auto;
+        }
+    
+        &__block-contact {
+            display: none;
+        }
+
+        &__block-search {
+            position: relative;
+            padding: 12px 0;
+        }
+
+        &__block-search .max-width {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        .search {
+            margin-left: 0;
+            margin-top: 12px;
+
+            &__block-input {
+                grid-template-columns: 40px 1fr;
+                width: 100%;
+                height: 41px;
+            }
+
+            &__input {
+                font-size: 14px;
+            }
+        }
+
+        .contact-info,
+        .specific-title {
+            display: block;
+        }
+
+        .specific-title {
+            color: $light-text;
+        }
+
+        .contact-info {
+
+            &__icon use {
+                stroke: $black-text;
+                fill: none;
+            }
+
+            &__link {
+                color: $black-text;
+            }
+        }
+
+        .main-nav {
+            &__list {
+                flex-direction: column;
+                align-items: flex-start;
+                margin-top: 20px;
+            }
+
+            &__li:not(:first-child) {
+                margin-left: 0;
+                margin-top: 20px;
+            }
+        }
+
+        .social-buttons {
+            display: block;
+        }
+    }
+
+    .footer {
+        &__wrapper-contacts {
+            position: relative;
+            padding: 40px 0 97px 0;
+
+            .main-container {
+                flex-direction: column;
+            }
+        }
+
+        &__wrapper-copyright {
+            padding: 0 0 20px 0;
+
+            .main-container {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+        }
+
+        &__block-copyright-links {
+            margin-top: 20px;
+        }
+
+        &__copyright {
+            font-size: 14px;
+        }
+
+        &__copyright-link {
+            font-size: 12px;
+
+            &:not(:first-child) {
+                margin-left: 26px;
+            }
+        }
+
+        .for-clients,
+        .contact-info {
+            margin-top: 28px;
+        }
+
+        .for-clients {
+            margin-left: 0;
+        }
+
+        .contact-info {
+            margin-left: 0;
+        }
+
+        .back-top {
+            position: absolute;
+            right: 20px;
+        }
+
+        .social-buttons {
+            position: absolute;
+            bottom: 40px;
+        }
+    }
+}
