--- a/dev/assets/styles/parts/components/contact-info.scss
+++ b/dev/assets/styles/parts/components/contact-info.scss
@@ -16,6 +16,11 @@
     &__icon {
         width: 20px;
         height: 20px;
+
+        use {
+            stroke: $white;
+            fill: none;
+        }
     }
 
     &__link {
