--- a/dev/assets/styles/parts/layouts/footer.scss
+++ b/dev/assets/styles/parts/layouts/footer.scss
@@ -36,7 +36,7 @@
 
     &__copyright,
     &__copyright-link {
-        font-weight: 500px;
+        font-weight: 500;
         color: $white;
     }
 
