the banner on the main page has been made and adapted

--- a/dev/assets/styles/_vars.scss
+++ b/dev/assets/styles/_vars.scss
@@ -26,3 +26,6 @@ $transition-time: 0.3s;
 $shadow-one: 0px 4px 20px rgba(183, 213, 255, 0.2);
 $shadow-two: 0px 4px 20px #F2F2F2;
 $shadow-three: 0px 4px 20px rgba(44, 47, 56, 0.08);
+
+$maxWidth: 1920;
+$maxWidthContainer: 1440;
