--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -3,3 +3,5 @@
 @import './components/social-buttons';
 @import './components/for-clients';
 @import './components/contact-info';
+@import './components/main-banner';
+@import './components/search-bar';
