--- a/dev/assets/styles/media/max-992.scss
+++ b/dev/assets/styles/media/max-992.scss
@@ -9,6 +9,7 @@
                     opacity: 1;
                     visibility: visible;
                     pointer-events: auto;
+                    z-index: 100;
                 }
 
                 &__burger-menu {
@@ -85,6 +86,7 @@
         &__block-search {
             position: relative;
             padding: 12px 0;
+            z-index: 105;
         }
 
         &__block-search .max-width {
@@ -95,16 +97,6 @@
         .search {
             margin-left: 0;
             margin-top: 12px;
-
-            &__block-input {
-                grid-template-columns: 40px 1fr;
-                width: 100%;
-                height: 41px;
-            }
-
-            &__input {
-                font-size: 14px;
-            }
         }
 
         .contact-info,
@@ -169,13 +161,7 @@
             margin-top: 20px;
         }
 
-        &__copyright {
-            font-size: 14px;
-        }
-
         &__copyright-link {
-            font-size: 12px;
-
             &:not(:first-child) {
                 margin-left: 26px;
             }
@@ -202,6 +188,77 @@
         .social-buttons {
             position: absolute;
             bottom: 40px;
+        }
+    }
+
+    .search {
+        &__block-input {
+            grid-template-columns: 40px 1fr;
+            width: 100%;
+            height: 41px;
+        }
+
+        &--link-map &__block-input {
+            grid-template-columns: 44px 1fr 31px;
+        }
+    }
+
+    .main-banner {
+        height: 518px;
+
+        .search-bar {
+            margin-top: 46px;
+        }
+    }
+
+    .search-bar {
+        &__block-tab {
+            flex-direction: column;
+            align-items: flex-start;
+            padding: 14px 12px;
+            width: 100%;
+        }
+
+        &__block-buttons {
+            margin-left: 0;
+            justify-content: space-between;
+        }
+
+        &__btn-filter {
+            width: 55px;
+
+            .btn {
+                &__text {
+                    display: none;
+                }
+
+                &__icon {
+                    margin-right: 0;
+                }
+            }
+        }
+
+        &__select-residential .select__btn,
+        & &__btn-filter {
+            min-height: 41px;
+        }
+
+        &__select-residential .select__btn {
+            padding: 5px 12px;
+        }
+
+        .btn-icon {
+            width: 52px;
+            height: 41px;
+        }
+
+        .search {
+            width: 100%;
+            margin-bottom: 6px;
+
+            &__block-input {
+                width: 100%;
+            }
         }
     }
 }
