--- a/dev/assets/styles/parts/_ui.scss
+++ b/dev/assets/styles/parts/_ui.scss
@@ -2,3 +2,7 @@
 @import './ui/social-button';
 @import './ui/specific-title';
 @import './ui/back-top';
+@import './ui/select';
+@import './ui/btn';
+@import './ui/btn-icon';
+@import './ui/hint';
