--- a/dev/assets/styles/parts/layouts/footer.scss
+++ b/dev/assets/styles/parts/layouts/footer.scss
@@ -1,8 +1,10 @@
 .footer {
+    position: relative;
     flex: 0 0 auto;
     background: $blue-gradient;
     border-radius: 50px 50px 0px 0px;
     box-shadow: $shadow-one;
+    color: $white;
 
     &__wrapper-contacts {
         padding: 70px 0;
@@ -20,7 +22,6 @@
 
     &__signature {
         font-size: 14px;
-        color: $white;
     }
 
     &__wrapper-copyright {
@@ -37,12 +38,20 @@
     &__copyright,
     &__copyright-link {
         font-weight: 500;
-        color: $white;
+    }
+
+    &__copyright-link {
+        @include adaptiv-font(16, 12);
+    }
+
+    &__copyright {
+        @include adaptiv-font(16, 14);
     }
 
     &__block-copyright-links {}
 
     &__copyright-link {
+        color: $white;
         &:not(:first-child) {
             margin-left: 154px;
         }
