the product card is made for 60%

--- a/dev/assets/styles/_vars.scss
+++ b/dev/assets/styles/_vars.scss
@@ -7,6 +7,8 @@ $white: #fff;
 $navy-blue: #2F80ED;
 $coral: #FF5B4E;
 $pink: #FFC7C7;
+$green: #00A688;
+$purple: #9B51E0;
 $blue: #B7D5FF;
 $light-blue: #DEECFF;
 $light-colar: #FFE9E9;
