--- a/dev/assets/styles/media/max-420.scss
+++ b/dev/assets/styles/media/max-420.scss
@@ -1,1 +1,7 @@
-@media screen and (max-width: 420px) {}
+@media screen and (max-width: 420px) {
+    .search-bar {
+        &__block-buttons {
+            width: 100%;
+        }
+    }
+}
