--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -5,3 +5,5 @@
 @import './components/contact-info';
 @import './components/main-banner';
 @import './components/search-bar';
+@import './components/product-card';
+@import './components/status-labels';
