--- a/dev/assets/styles/parts/_ui.scss
+++ b/dev/assets/styles/parts/_ui.scss
@@ -6,3 +6,6 @@
 @import './ui/btn';
 @import './ui/btn-icon';
 @import './ui/hint';
+@import './ui/status-label';
+@import './ui/affiliation-label';
+@import './ui/favorites-icon'; 
