--- a/dev/pages/include/components/search-bar.html
+++ b/dev/pages/include/components/search-bar.html
@@ -40,7 +40,7 @@
                     </svg>
                     <span class="btn__text">Filters</span>
                 </a>
-                <a href="#" class="btn-icon search-bar__btn-search-list">
+                <a href="#" class="btn-icon hint search-bar__btn-search-list">
                     <svg class="btn-icon__icon">
                         <use xlink:href="./assets/icons/sprite-svg.svg#three-stripes"/>
                     </svg>
@@ -48,7 +48,7 @@
                         "text": "Search on listing"
                     })
                 </a>
-                <a href="#" class="btn-icon search-bar__btn-search-map">
+                <a href="#" class="btn-icon hint search-bar__btn-search-map">
                     <svg class="btn-icon__icon">
                         <use xlink:href="./assets/icons/sprite-svg.svg#point"/>
                     </svg>
