--- a/dev/assets/styles/_classes.scss
+++ b/dev/assets/styles/_classes.scss
@@ -64,3 +64,15 @@
         }
     }
 }
+
+@keyframes bounce {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
