--- a/dev/assets/styles/parts/components/search.scss
+++ b/dev/assets/styles/parts/components/search.scss
@@ -1,5 +1,13 @@
 .search {
 
+    &.active {
+        width: 100%;
+
+        .search__block-input {
+            width: 86%;
+        }
+    }
+
     &--link-map &__block-input {
         grid-template-columns: 44px 1fr 36px;
     }
@@ -12,6 +20,7 @@
         height: 48px;
         background-color: $white;
         border-radius: 10px;
+        transition: width $transition-time;
     }
 
     &__btn {
