a product card has been completed, a block with cards has been made, a block with popular cities has been made. All desktop

--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -7,3 +7,6 @@
 @import './components/search-bar';
 @import './components/product-card';
 @import './components/status-labels';
+@import './components/share';
+@import './components/card-section';
+@import './components/popular-cities';
