--- a/dev/assets/styles/parts/_ui.scss
+++ b/dev/assets/styles/parts/_ui.scss
@@ -8,4 +8,7 @@
 @import './ui/hint';
 @import './ui/status-label';
 @import './ui/affiliation-label';
-@import './ui/favorites-icon'; 
+@import './ui/favorites-icon';
+@import './ui/title-section';
+@import './ui/toggle-property';
+@import './ui/arrow';
