--- a/dev/assets/styles/main.scss
+++ b/dev/assets/styles/main.scss
@@ -24,7 +24,8 @@ body {
     color: $black-text;
 }
 
-@import './pages/index.scss';
+@import './pages/page.scss';
+@import './pages/main-page.scss';
 
 @import './parts/layouts';
 @import './parts/components';
