--- a/dev/assets/styles/parts/components/product-card.scss
+++ b/dev/assets/styles/parts/components/product-card.scss
@@ -1,8 +1,20 @@
 .product-card {
+    position: relative;
     width: 328px;
     border: 1px solid $light-blue;
     background-color: $white;
     border-radius: 8px;
+    transition: border-radius $transition-time;
+
+    &:hover {
+        border-radius: 8px 8px 0 0;
+    }
+
+    &:hover &__wrapper-btns {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+    }
 
     &__block-images {
         position: relative;
@@ -151,6 +163,42 @@
     &__employee-post {
         @include adaptiv-font(14, 10);
         margin-top: 3px;
+    }
+
+    &__wrapper-btns {
+        position: absolute;
+        z-index: 5;
+        top: 100%;
+        left: -1px;
+        right: -1px;
+        padding: 8px 16px 16px 16px;
+        border-left: 1px solid $light-blue;
+        border-right: 1px solid $light-blue;
+        border-bottom: 1px solid $light-blue;
+        background-color: $white;
+        border-radius: 0 0 8px 8px;
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+        transition: opacity $transition-time, visibility $transition-time;
+    }
+
+    &__block-btns {
+        display: flex;
+        justify-content: space-between;
+
+        &:not(:first-child) {
+            margin-top: 8px;
+        }
+
+        .product-card__btn-compare {
+            width: 192px;
+        }
+    }
+
+    .btn-icon {
+        width: 44px;
+        height: 44px;
     }
 
     .status-labels,
