--- a/dev/pages/include/components/product-card.html
+++ b/dev/pages/include/components/product-card.html
@@ -61,5 +61,26 @@
                 <span class="btn__text">Contact</span>
             </button>
         </div>
+        <div class="product-card__wrapper-btns">
+            <div class="product-card__block-btns">
+                <a href="#" class="btn btn--size-sm btn--theme--coral">
+                    <span class="btn__text">Book Showing</span>
+                </a>
+                <a href="#" class="btn btn--size-sm btn--theme--navy-blue">
+                    <span class="btn__text">Request Info</span>
+                </a>
+            </div>
+            <div class="product-card__block-btns">
+                <a href="#" class="product-card__btn-compare btn btn--size-sm btn--theme--transparent">
+                    <span class="btn__text">Compare</span>
+                </a>
+                <a href="#" class="btn-icon">
+                    <svg class="btn-icon__icon">
+                        <use xlink:href="./assets/icons/sprite-svg.svg#point"/>
+                    </svg>
+                </a>
+                @include('./share.html')
+            </div>
+        </div>
     </div>
 </div>
