an adaptive block with product cards and a block with popular cities has been made

--- a/dev/assets/styles/media/max-1200.scss
+++ b/dev/assets/styles/media/max-1200.scss
@@ -6,4 +6,10 @@
             }
         }
     }
+
+    .card-section {
+        &__wrapper-cards {
+            grid-template-columns: repeat(3, 1fr);
+        }
+    }
 }
