--- a/dev/pages/include/components/popular-cities.html
+++ b/dev/pages/include/components/popular-cities.html
@@ -42,65 +42,11 @@
                             <span class="popular-cities__slide-name">antalya</span>
                             <span class="popular-cities__slide-objects">642 objects</span>
                         </div>
-                        <a href="#" class="arrow arrow--size--sm arrow--theme--transparent">
+                        <span href="#" class="arrow arrow--size--sm arrow--theme--transparent">
                             <svg class="arrow__icon">
                                 <use xlink:href="./assets/icons/sprite-svg.svg#arrow-right-white"/>
                             </svg>
-                        </a>
-                    </div>
-                </a>
-            </div>
-            <div class="popular-cities__block-slide">
-                <a href="#" class="link-reset">
-                    <div class="popular-cities__block-slide-bg">
-                        <img src="./assets/images/antalya.jpg" class="popular-cities__slide-bg" alt="">
-                    </div>
-                    <div class="popular-cities__wrapper-slide-info">
-                        <div class="popular-cities__block-slide-info">
-                            <span class="popular-cities__slide-name">antalya</span>
-                            <span class="popular-cities__slide-objects">642 objects</span>
-                        </div>
-                        <a href="#" class="arrow arrow--size--sm arrow--theme--transparent">
-                            <svg class="arrow__icon">
-                                <use xlink:href="./assets/icons/sprite-svg.svg#arrow-right-white"/>
-                            </svg>
-                        </a>
-                    </div>
-                </a>
-            </div>
-            <div class="popular-cities__block-slide">
-                <a href="#" class="link-reset">
-                    <div class="popular-cities__block-slide-bg">
-                        <img src="./assets/images/antalya.jpg" class="popular-cities__slide-bg" alt="">
-                    </div>
-                    <div class="popular-cities__wrapper-slide-info">
-                        <div class="popular-cities__block-slide-info">
-                            <span class="popular-cities__slide-name">antalya</span>
-                            <span class="popular-cities__slide-objects">642 objects</span>
-                        </div>
-                        <a href="#" class="arrow arrow--size--sm arrow--theme--transparent">
-                            <svg class="arrow__icon">
-                                <use xlink:href="./assets/icons/sprite-svg.svg#arrow-right-white"/>
-                            </svg>
-                        </a>
-                    </div>
-                </a>
-            </div>
-            <div class="popular-cities__block-slide">
-                <a href="#" class="link-reset">
-                    <div class="popular-cities__block-slide-bg">
-                        <img src="./assets/images/antalya.jpg" class="popular-cities__slide-bg" alt="">
-                    </div>
-                    <div class="popular-cities__wrapper-slide-info">
-                        <div class="popular-cities__block-slide-info">
-                            <span class="popular-cities__slide-name">antalya</span>
-                            <span class="popular-cities__slide-objects">642 objects</span>
-                        </div>
-                        <a href="#" class="arrow arrow--size--sm arrow--theme--transparent">
-                            <svg class="arrow__icon">
-                                <use xlink:href="./assets/icons/sprite-svg.svg#arrow-right-white"/>
-                            </svg>
-                        </a>
+                        </span>
                     </div>
                 </a>
             </div>
