--- a/dev/assets/styles/media/max-992.scss
+++ b/dev/assets/styles/media/max-992.scss
@@ -261,4 +261,88 @@
             }
         }
     }
+
+    .card-section {
+        &__wrapper-cards {
+            grid-template-columns: repeat(2, 1fr);
+            grid-column-gap: 10px;
+            grid-row-gap: 10px;
+        }
+
+        &__block-head {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        &__block-links {
+            width: 100%;
+            margin-top: 20px;
+
+            .btn {
+                display: flex;
+            }
+        }
+
+        &__block-btns {
+            margin-top: 20px;
+        }
+
+        &__btn-filters {
+            display: none;
+        }
+
+        &__btn-more {
+            width: 100%;
+            height: 48px;
+        }
+    }
+
+    .popular-cities {
+        &__block-nav-slider {
+            display: none;
+        }
+
+        &__block-slider {
+            margin-top: 20px;
+        }
+
+        &__block-slide {
+            height: 215px;
+            width: 155px;
+        }
+
+        &__wrapper-slide-info {
+            bottom: 15px;
+            left: 17px;
+            right: 17px;
+        }
+
+        &__block-subtitle {
+            margin-top: 12px;
+        }
+
+        .main-container {
+            grid-template-columns: 1fr;
+            padding: 32px 20px 32px 20px;
+
+            &::before {
+                width: 100%;
+                left: 0;
+            }
+        }
+
+        .search {
+            margin-top: 18px;
+        }
+    }
+
+    .page__content {
+        padding: 24px 0 50px 0;
+    }
+
+    .main-page {
+        .popular-cities {
+            margin-top: 40px;
+        }
+    }
 }
