--- a/dev/assets/styles/parts/components/card-section.scss
+++ b/dev/assets/styles/parts/components/card-section.scss
@@ -5,6 +5,28 @@
         justify-content: space-between;
         margin-bottom: 30px;
     }
+    
+    &__block-links {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .btn {
+            display: none;
+            width: 48px;
+            height: 48px;
+
+            &__icon {
+                width: 28px;
+                height: 28px;
+                margin-right: 0;
+
+                use {
+                    fill: $navy-blue;
+                }
+            }
+        }
+    }
 
     &__wrapper-cards {
         display: grid;
@@ -28,5 +50,9 @@
                 fill: $navy-blue;
             }
         }
+    }
+
+    .product-card {
+        width: 100%;
     }
 }
