--- a/dev/assets/styles/pages/main-page.scss
+++ b/dev/assets/styles/pages/main-page.scss
@@ -2,4 +2,16 @@
     .popular-cities {
         margin-top: 60px;
     }
+
+    .about-numbers {
+        margin-top: 80px;
+    }
+
+    .card-slider {
+        margin-top: 80px;
+    }
+
+    .estate-statistics {
+        margin-top: 70px;
+    }
 }
