--- a/dev/assets/styles/parts/components/product-card.scss
+++ b/dev/assets/styles/parts/components/product-card.scss
@@ -210,6 +210,12 @@
     .status-labels {
         left: 16px;
         width: 75%;
+
+        &__li {
+            &:last-child {
+                display: none;
+            }
+        }
     }
 
     .favorites-icon {
