--- a/dev/assets/styles/media/max-1200.scss
+++ b/dev/assets/styles/media/max-1200.scss
@@ -12,4 +12,17 @@
             grid-template-columns: repeat(3, 1fr);
         }
     }
+
+    .estate-statistics {
+        .main-container {
+            grid-template-columns: 1fr;
+            grid-row-gap: 29px;
+            padding: 56px 80px 56px 80px;
+
+            &::before {
+                width: auto;
+                right: 20px;
+            }
+        }
+    }
 }
