--- a/dev/assets/styles/media/max-767.scss
+++ b/dev/assets/styles/media/max-767.scss
@@ -1,1 +1,20 @@
-@media screen and (max-width: 767px) {}
+@media screen and (max-width: 767px) {
+    .estate-statistics {
+        &__block-slider {
+            flex-wrap: wrap;
+            margin: -6px;
+            justify-content: center;
+        }
+
+        &__block-slide {
+            width: 100%;
+            height: 220px;
+        }
+
+        &__slide-image {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+    }
+}
