--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -10,3 +10,6 @@
 @import './components/share';
 @import './components/card-section';
 @import './components/popular-cities';
+@import './components/about-numbers';
+@import './components/card-slider';
+@import './components/estate-statistics';
