--- a/dev/pages/include/components/popular-cities.html
+++ b/dev/pages/include/components/popular-cities.html
@@ -18,18 +18,7 @@
                 </div>
                 <!-- Результаты поиска -->
             </div>
-            <div class="popular-cities__block-nav-slider">
-                <button type="button" class="arrow arrow--size--bg arrow--theme--blue" disabled>
-                    <svg class="arrow__icon">
-                        <use xlink:href="./assets/icons/sprite-svg.svg#arrow-left-white"/>
-                    </svg>
-                </button>
-                <button type="button" class="arrow arrow--size--bg arrow--theme--blue">
-                    <svg class="arrow__icon">
-                        <use xlink:href="./assets/icons/sprite-svg.svg#arrow-right-white"/>
-                    </svg>
-                </button>
-            </div>
+            @include('../ui/slider-btns.html')
         </div>
         <div class="popular-cities__block-slider">
             <div class="popular-cities__block-slide">
