--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -13,3 +13,11 @@
 @import './components/about-numbers';
 @import './components/card-slider';
 @import './components/estate-statistics';
+@import './components/commercial-block';
+@import './components/need-help';
+@import './components/pagination';
+@import './components/basic-properties';
+@import './components/property-description';
+@import './components/side-panel';
+@import './components/property-details';
+@import './components/other-features';
