--- a/dev/assets/styles/parts/_ui.scss
+++ b/dev/assets/styles/parts/_ui.scss
@@ -13,3 +13,5 @@
 @import './ui/toggle-property';
 @import './ui/arrow';
 @import './ui/slider-btns';
+@import './ui/sorting';
+@import './ui/count-objects';
