--- a/dev/pages/include/components/about-numbers.html
+++ b/dev/pages/include/components/about-numbers.html
@@ -1,9 +1,7 @@
 <div class="about-numbers">
     <div class="main-container max-width">
         <div class="about-numbers__block-head">
-            @include('../ui/title-section.html', {
-                "title": "About us in numbers"
-            })
+            <h2 class="title-section title-reset">About us in numbers</h2>
         </div>
         <ul class="about-numbers__list list-reset">
             <li class="about-numbers__li">
