--- a/dev/pages/include/components/card-section.html
+++ b/dev/pages/include/components/card-section.html
@@ -1,9 +1,7 @@
 <section class="card-section">
     <div class="main-container max-width">
         <div class="card-section__block-head">
-            @include('../ui/title-section.html', {
-                "title": "New real estate properties for sale in Turkey"
-            })
+            <h2 class="title-section title-reset">New real estate properties for sale in Turkey</h2>
             <div class="card-section__block-links">
                 @include('../ui/toggle-property.html')
                 <a href="#" class="btn btn--size-sm btn--theme--light-blue">
