--- a/dev/pages/include/components/estate-statistics.html
+++ b/dev/pages/include/components/estate-statistics.html
@@ -1,9 +1,7 @@
-<div class="estate-statistics">
+<section class="estate-statistics">
     <div class="main-container max-width">
         <div class="estate-statistics__block-info">
-            @include('../ui/title-section.html', {
-                "title": "Real Estate Statistics"
-            })
+            <h2 class="title-section title-reset">Real Estate Statistics</h2>
             <div class="estate-statistics__block-text">
                 <p>
                     Toronto real estate average sold price in the last 30 days (November 16 - December 15) was 1,061,295 TL, which is -161,295 TL (-5.7%) lower than the average price of 1,121,301 TL in the previous 30 day period.
@@ -23,4 +21,4 @@
             </div>
         </div>
     </div>
-</div>
+</section>
