--- a/dev/pages/include/components/main-banner.html
+++ b/dev/pages/include/components/main-banner.html
@@ -5,7 +5,7 @@
     <div class="main-banner__inner">
         <div class="main-container max-width">
             <span class="main-banner__subtitle">Real Estate Searching Platform</span>
-            <h1 class="main-banner__title title-reset">Search 1,200,000 Active & Sold Listings</h1>
+            <h1 class="title-section title-reset main-banner__title">Search 1,200,000 Active & Sold Listings</h1>
             @include('../components/search-bar.html')
         </div>
     </div>
