--- a/dev/pages/include/components/popular-cities.html
+++ b/dev/pages/include/components/popular-cities.html
@@ -1,9 +1,7 @@
 <div class="popular-cities">
     <div class="main-container max-width">
         <div class="popular-cities__block-info">
-            @include('../ui/title-section.html', {
-                "title": "Popular cities"
-            })
+            <h2 class="title-section title-reset">Popular cities</h2>
             <div class="popular-cities__block-subtitle">
                 <span class="popular-cities__subtitle">Make your search easier! See propertiesin your city</span>
             </div>
