--- a/dev/pages/include/components/product-card.html
+++ b/dev/pages/include/components/product-card.html
@@ -79,7 +79,7 @@
         </div>
         <div class="product-card__wrapper-employee">
             <div class="product-card__block-employee">
-                <div class="product-card__block-employee-avatar">
+                <div class="product-card__block-employee-avatar product-card__block-employee-avatar--verified">
                     <img src="./assets/images/employee-avatar-1.jpg" class="product-card__employee-avatar" alt="">
                 </div>
                 <div class="product-card__block-info-employee">
