--- a/dev/pages/include/components/card-slider.html
+++ b/dev/pages/include/components/card-slider.html
@@ -1,13 +1,11 @@
-<div class="card-slider">
+<section class="card-slider">
     <div class="main-container max-width">
         <div class="card-slider__block-head">
-            @include('../ui/title-section.html', {
-                "title": "Recently viewed"
-            })
+            <h2 class="title-section title-reset">Recently viewed</h2>
             @include('../ui/slider-btns.html')
         </div>
         <div class="card-slider__block-slider">
             @include('./product-card.html')
         </div>
     </div>
-</div>
+</section>
